# rusty-validator

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
docs/adr/: 0001-treues-binding-der-validator-crate.md  0002-reines-praedikat-binding-ergonomie-separat.md  0003-pythonische-parameternamen.md  0004-strikter-typ-vertrag.md
src/: lib.rs
tests/: test_email_validation.py  test_ip_validation.py  test_url_validation.py
