[package]
name = "rusty_validator"
version = "0.1.1-rc.3"
edition = "2021"
description = "A Rust-based validation library with Python bindings, leveraging the power of pyo3 and validator crates to provide robust and efficient email validation."
license = "MIT License"
homepage = "https://github.com/mbalzert1978/rusty-validator"

[lib]
name = "rusty_validator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.1"
validator = "0.18.1"
