[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "rusty-validator"
requires-python = ">=3.13"
authors = [{ name = "Iorio Markus", email = "mbalzert@gmail.com" }]
urls = { "Homepage" = "https://github.com/mbalzert1978/rusty-validator" }
keywords = ["rust", "validation"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["license", "version"]

[dependency-groups]
dev = [
    "maturin>=1.8,<2.0",
    "pytest",
    "pytest-cov",
    "mypy",
]

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py313"]
python-source = "python"
module-name = "rusty_validator._validator"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
no_implicit_optional = true
